--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "type": "git",
     "url": "git@github.com:eridem/hostify.git"
   },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },
   "dependencies": {
     "camelcase": "^4.0.0",
     "chalk": "^1.1.3",
@@ -41,6 +47,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "ghooks": "^2.0.0",
     "mocha": "^3.2.0",
     "nyc": "^10.0.0",
     "standard": "^8.6.0"
