--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "standard": "standard",
-    "pretest": "standard --fix",
+    "pretest": "standard --fix lib/**/*.js",
     "test": "npm run test-coverage",
     "test-coverage": "nyc --cache mocha --timeout=8000 --check-leaks \"test/**/*.js\"",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
